# libwhirlwind

./: .clang-format  .clang-tidy  .gitattributes  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  vcpkg.json
.github/: dependabot.yml
.github/workflows/: ci.yml
cmake/: WhirlwindWarnings.cmake  version.hpp.in
ext/: CMakeLists.txt
include/whirlwind/: integrate_unwrapped_gradients.hpp  residue.hpp
include/whirlwind/array/: ndarray.hpp  ndspan.hpp
include/whirlwind/common/: assert.hpp  compatibility.hpp  heap.hpp  math.hpp  namespace.hpp  ndarray.hpp  ndspan.hpp  numbers.hpp  numeric.hpp  queue.hpp  stddef.hpp  type_traits.hpp  version.hpp.in
include/whirlwind/container/: heap.hpp  pair_like.hpp  queue.hpp  vector.hpp
include/whirlwind/graph/: csr_graph.hpp  dial.hpp  digraph.hpp  dijkstra.hpp  dijkstra_concepts.hpp  edge_list.hpp  forest.hpp  forest_concepts.hpp  graph_concepts.hpp  graph_traits.hpp  predecessors.hpp  predecessors_view.hpp  rectangular_grid_graph.hpp  shortest_path_forest.hpp  simple_forest.hpp
include/whirlwind/logging/: null_logger.hpp
include/whirlwind/math/: math.hpp  numbers.hpp
include/whirlwind/ndarray/: ndarray.hpp  ndspan.hpp
include/whirlwind/network/: network.hpp  network_traits.hpp  primal_dual.hpp  residual_graph.hpp  residual_graph_traits.hpp  successive_shortest_paths.hpp  uncapacitated.hpp  unit_capacity.hpp
include/whirlwind/spline/: cubic_b_spline.hpp  cubic_b_spline_2d.hpp  cubic_b_spline_3d.hpp  cubic_b_spline_basis.hpp
include/whirlwind/util/: get_residues.hpp  integrate_unwrapped_gradients.hpp
test/: CMakeLists.txt  string_conversions.hpp
test/common/: test_version.cpp
test/graph/: csr_graph.cpp  digraph.cpp  forest.cpp  forest_concepts.cpp  graph_concepts.cpp  test_csr_graph.cpp  test_dial.cpp  test_dijkstra.cpp  test_dijkstra_concepts.cpp  test_forest.cpp  test_forest_concepts.cpp  test_shortest_path_forest.cpp
test/math/: test_math.cpp  test_numbers.cpp
test/testing/: string_conversions.hpp
test/testing/matchers/: forest_matchers.hpp  graph_matchers.hpp  range_matchers.hpp
